fixed numerous scaling and overflow issues, replaced css-grid with flexbox

--- a/style.css
+++ b/style.css
@@ -3,14 +3,30 @@
   html,
   body {
     margin: 0;
+    padding: 0;
     height: 100%;
+    width: 100%;
   }
 
   #viewDiv {
     height: 100%;
     display: flex;
     justify-content: center;
+  }
 
+  .mapControlsFlexbox {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mapControlsContainer {
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
   }
 
   .header {
@@ -28,21 +44,24 @@
     z-index: 1;
   }
 
+  .testme {
+    background-color: red;
+  }
+
   .searchControls {
     height: 50px;
-    width: 100%;
+    width: calc(100% - 14px);
     position: absolute;
-    top: 15px;
-    display: grid;
-    grid-template-columns: 1fr 50px 0px;
-    column-gap: 10px;
+    top: 10px;
+    left: 7px;
+    display: flex;
+    justify-content: space-between;
   }
 
   .searchBar {
     height: 45px;
     background-color: rgb(45, 45, 45);    
     border-radius: 40px;
-    margin-left: 7px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -93,19 +112,16 @@
     background-color: rgb(45, 45, 45);    color: white;
     width: 45px;
     height: 45px;
-    margin-right: 7px;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    order: 1;
     cursor: pointer;
   }
 
   .countryBar {
     width: 0;
     height: 0;
-    order: 2;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     cursor: pointer;
   }
@@ -119,6 +135,12 @@
   .countryText {
     opacity: 0;
     width: 0;
+    font-size: 0px;
+  }
+
+  .countryMapChartContainer {
+    display: flex;
+    
   }
 
   .imfContainer {
@@ -135,7 +157,7 @@
     bottom: 30px;
     right: 7px;
     display: flex;
-    align-items: center;
+    align-items: end;
     justify-content: center;
     flex-direction: column;
     row-gap: 9px;
@@ -296,9 +318,8 @@
   @media screen and (min-width: 800px) {
 
     .countryBar {
-      width: unset;
+      width: 120px;
       height: unset;
-      order: 2;
       display: flex;
       justify-content: start;
       align-items: center;
@@ -307,10 +328,12 @@
       border-radius: 40px;
       height: 45px;
       padding-left: 20px;
+      margin-right: 12px;
     }
 
     .countryText {
       font-weight: 900;
+      font-size: unset;
       padding-left: 12px;
       opacity: unset;
       width: unset;
@@ -323,19 +346,7 @@
     }
 
     .searchControls {
-      top: 0;
-      padding-top: 7px;
-      padding-bottom: 7px;
-      grid-template-columns: 400px 1fr 150px 50px;
-    }
-
-    .searchBar {
-      order: 0;
-    }
-
-    .mapChartSwitcher {
-      margin-right: unset;
-      order: 3;
+      /* grid-template-columns: 1fr 1fr 150px 50px; */
     }
 
     .searchIcon {
